add admin files for dev, but haven`t work with em yet

--- a/css/static.css
+++ b/css/static.css
@@ -8,7 +8,7 @@ div#container
 body
 {
    background-color: #FFFFFF;
-   background-image: url(images/fon.png);
+   background-image: url(/images/fon.png);
    background-attachment: fixed;
    background-position: center center;
    background-repeat: repeat;
