--- a/css/arch.css
+++ b/css/arch.css
@@ -1,247 +1,311 @@
-div#container
-{
-    width: 994px;
-    position: relative;
-    margin: 0 auto 0 auto;
-    text-align: left;
+div#container {
+   width: 994px;
+   position: relative;
+   margin: 0 auto 0 auto;
+   text-align: left;
 }
-#Table1
-{
-    border: 0px #C0C0C0 solid;
-    background-color: transparent;
-    background-image: none;
-    border-spacing: 5px;
-}
-#Table1 td
-{
-    padding: 0px 0px 0px 0px;
-}
-#Table1 td div
-{
-    white-space: nowrap;
-}
-#Table1 .cell0
-{
-    background-color: transparent;
-    background-image: none;
-    text-align: center;
-    vertical-align: top;
-    width: 87px;
-    height: 174px;
-    color: #000000;
-    font-family: Tahoma;
-    font-size: 13px;
-    line-height: 24px;
-}
-#Table1 .cell1
-{
-    background-color: transparent;
-    background-image: none;
-    text-align: center;
-    vertical-align: bottom;
-    width: 131px;
-    height: 174px;
-    color: #00A0E4;
-    font-family: Tahoma;
-    font-size: 13px;
-    line-height: 16px;
-}
-#Table1 .cell2
-{
-    background-color: transparent;
-    background-image: none;
-    text-align: center;
-    vertical-align: bottom;
-    height: 174px;
-}
-#Table1
-{
-    position: absolute;
-    left: 35px;
-    top: 93px;
-    width: 920px;
-    height: 363px;
-    z-index: 0;
-}
-#wb_Text2
-{
-    background-color: transparent;
-    background-image: none;
-    border: 0px #000000 solid;
-    padding: 0;
-    margin: 0;
-    text-align: justify;
-}
-#wb_Text2 div
-{
-    text-align: justify;
-}
-#wb_Text2
-{
-    position: absolute;
-    left: 45px;
-    top: 33px;
-    width: 900px;
-    height: 24px;
-    text-align: justify;
-    z-index: 6;
-}
-#wb_Image8
-{
-    position: absolute;
-    left: 148px;
-    top: 287px;
-    width: 100px;
-    height: 142px;
-    z-index: 1;
-}
-#wb_Image9
-{
-    position: absolute;
-    left: 147px;
-    top: 108px;
-    width: 100px;
-    height: 142px;
-    z-index: 2;
-}
-#wb_Image5
-{
-    position: absolute;
-    left: 282px;
-    top: 108px;
-    width: 100px;
-    height: 142px;
-    z-index: 3;
-}
-#wb_Image6
-{
-    position: absolute;
-    left: 419px;
-    top: 108px;
-    width: 100px;
-    height: 142px;
-    z-index: 4;
-}
-#wb_Image7
-{
-    position: absolute;
-    left: 555px;
-    top: 108px;
-    width: 100px;
-    height: 142px;
-    z-index: 5;
-}
-#Image8
-{
-    border: 0px #000000 solid;
-    padding: 0px 0px 0px 0px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-#Image9
-{
-    border: 0px #000000 solid;
-    padding: 0px 0px 0px 0px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-#Image5
-{
-    border: 0px #000000 solid;
-    padding: 0px 0px 0px 0px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-#Image6
-{
-    border: 0px #000000 solid;
-    padding: 0px 0px 0px 0px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-#Image7
-{
-    border: 0px #000000 solid;
-    padding: 0px 0px 0px 0px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-.arch_menu
-{
-    position: absolute;
-    float: left;
-    left: auto;
-    width: 200px;
-    background-color: #c4e3f3;
-    background-image: none;
-    text-align: center;
 
+#Table1 {
+   border: 0px #C0C0C0 solid;
+   background-color: transparent;
+   background-image: none;
+   border-spacing: 5px;
+}
 
+#Table1 td {
+   padding: 0px 0px 0px 0px;
 }
-.arch_menu_one_year
-{
-    margin-top: 10px;
-    margin-bottom: 15px;
+
+#Table1 td div {
+   white-space: nowrap;
 }
-.arch_menu_year_text
-{
-    font-size: 2em;
-    margin-bottom: 10px;
-    text-decoration: underline;
+
+#Table1 .cell0 {
+   background-color: transparent;
+   background-image: none;
+   text-align: center;
+   vertical-align: top;
+   width: 87px;
+   height: 174px;
+   color: #000000;
+   font-family: Tahoma;
+   font-size: 13px;
+   line-height: 24px;
+}
+
+#Table1 .cell1 {
+   background-color: transparent;
+   background-image: none;
+   text-align: center;
+   vertical-align: bottom;
+   width: 131px;
+   height: 174px;
+   color: #00A0E4;
+   font-family: Tahoma;
+   font-size: 13px;
+   line-height: 16px;
+}
+
+#Table1 .cell2 {
+   background-color: transparent;
+   background-image: none;
+   text-align: center;
+   vertical-align: bottom;
+   height: 174px;
+}
+
+#Table1 {
+   position: absolute;
+   left: 35px;
+   top: 93px;
+   width: 920px;
+   height: 363px;
+   z-index: 0;
+}
+
+#wb_Text2 {
+   background-color: transparent;
+   background-image: none;
+   border: 0px #000000 solid;
+   padding: 0;
+   margin: 0;
+   text-align: justify;
+}
+
+#wb_Text2 div {
+   text-align: justify;
+}
+
+#wb_Text2 {
+   position: absolute;
+   left: 45px;
+   top: 33px;
+   width: 900px;
+   height: 24px;
+   text-align: justify;
+   z-index: 6;
+}
+
+#wb_Image8 {
+   position: absolute;
+   left: 148px;
+   top: 287px;
+   width: 100px;
+   height: 142px;
+   z-index: 1;
+}
+
+#wb_Image9 {
+   position: absolute;
+   left: 147px;
+   top: 108px;
+   width: 100px;
+   height: 142px;
+   z-index: 2;
+}
+
+#wb_Image5 {
+   position: absolute;
+   left: 282px;
+   top: 108px;
+   width: 100px;
+   height: 142px;
+   z-index: 3;
+}
+
+#wb_Image6 {
+   position: absolute;
+   left: 419px;
+   top: 108px;
+   width: 100px;
+   height: 142px;
+   z-index: 4;
+}
+
+#wb_Image7 {
+   position: absolute;
+   left: 555px;
+   top: 108px;
+   width: 100px;
+   height: 142px;
+   z-index: 5;
+}
+
+#Image8 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+
+#Image9 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+
+#Image5 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+
+#Image6 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+
+#Image7 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+
+.arch_menu {
+   position: relative;
+   float: left;
+   left: auto;
+   width: 20%;
+   height: 100%;
+   background-color: #f0f2f2;
+   background-image: none;
+   text-align: center;
 
 }
-.arch_menu_link
-{
-    font-size: 1.35em;
-    text-decoration: none;
+
+.arch_menu_one_year {
+   margin-top: 10px;
+   margin-bottom: 15px;
+}
+
+.arch_menu_year_text {
+   font-size: 2em;
+   margin-bottom: 10px;
+   text-decoration: underline;
 
 }
-.arch_content
-{
-    position: absolute;
-    float: left;
-    width: 700px;
-    left: 220px;
-}
-.arch_content_title
-{
-    text-align: center;
+
+.arch_menu_link {
+   font-size: 1.35em;
+   text-decoration: none;
 
 }
-.arch_content_article
-{
-    margin-top: 5px;
-    margin-bottom: 5px;
+
+.arch_content {
+   position: relative;
+   float: left;
+   width: 80%;
+   left: auto;
 }
-.article_title
-{
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.author
-{
+
+.arch_content_title {
+   text-align: center;
 
 }
-.author_name
-{
-position: absolute;
-    left: 480px;
+
+.arch_content_article {
+   margin-top: 5px;
+   margin-bottom: 5px;
 }
-.download_link
-{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    position: absolute;
-    left: 480px;
-    font-size: 1.125em;
+
+.article_title {
+   margin-top: 5px;
+   margin-bottom: 5px;
 }
+
+.author {
+   position: relative;
+   left: 480px;
+}
+
+.author_name {
+   position: relative;
+   left: 480px;
+}
+
+.download_link {
+   margin-top: 5px;
+   margin-bottom: 5px;
+   position: relative;
+   left: 60%;
+   font-size: 1.125em;
+}
+
+.article_menu {
+   position: relative;
+   left: auto;
+   float: left;
+   width: 20%;
+}
+
+.article_container {
+   position: relative;
+   float: left;
+   left: auto;
+   top: auto;
+   width: 60%;
+}
+
+.article_title {
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-weight: 600;
+   font-size: 1.05em;
+   color: #253e5a;
+   margin-bottom: 15px;
+}
+
+.article_author {
+   position: relative;
+   left: auto;
+}
+
+.article_author_name {
+   position: relative;
+   left: 35%;
+}
+
+.article_annotation {
+margin-top: 10px;
+   margin-bottom: 10px;
+}
+
+.article_keywords {
+margin-bottom: 10px;
+}
+
+.article_code {
+
+   position: relative;
+   float: left;
+   left: auto;
+}
+
+.article_code li {
+   list-style: none;
+}
+
+.article_link {
+   position: relative;
+   float: left;
+   left: auto;
+}
+
+.article_link li {
+   list-style: none;
+}
+
