--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -33,3 +33,11 @@ body {
     border-radius: 20%;
     -webkit-box-shadow: inset 0 1px 1px 1px rgba(0,0,0,.1),
 }
+#enterToMain{
+    text-align: center;
+    float: none;
+    margin: 0 auto;
+    width: 14vh;
+    border-radius: 20%;
+    -webkit-box-shadow: inset 0 1px 1px 1px rgba(0,0,0,.1),
+}
