--- a/css/arch.css
+++ b/css/arch.css
@@ -195,7 +195,18 @@ div#container {
    width: 100%;
    height: 100%;
 }
-
+#Image_4 {
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 190px;
+   height: 297px;
+}
+#prev {
+   width: 190px;
+   height: 297px;
+}
 .text_font {
    font-family: Tahoma, sans-serif;
    font-size: 15px;
